# multi-tenant-rag-system

./: Dockerfile.api  Dockerfile.worker  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  chat.py  evals.py  ingestion.py  retrieval.py
app/core/: __init__.py  celery_app.py  config.py  config.yaml  secrets.py
app/exception/: __init__.py  custom_exception.py
app/logger/: __init__.py  custom_logger.py
app/middleware/: __init__.py  supabase_auth.py
app/services/: __init__.py  guardrails.py  ingestion_service.py  orchestrator.py  pdf_embedding_pipeline.py  persistence.py  prompt_registry.py  retrieval_engine.py
app/services/evals/: README.md  aapl_10k_retrieval_evals_dataset.jsonl  langsmith_runner.py  retrieval_eval.py
app/tasks/: ingestion.py
app/workers/: __init__.py  health_server.py  pubsub_runner.py  push_app.py  reindex_job.py
designs/: cloud_run_pubsub_plan.md
infra/: backend.tf
infra/terraform/: locals.tf  main.tf  outputs.tf  variables.tf
prompts/: default.yml
tests/: __init__.py
